// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppSwitch snapshot matches default state 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#A3BB62"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      {
        "backgroundColor": "#666666",
        "borderRadius": 16,
      },
    ]
  }
  thumbTintColor="#BADE5B"
  tintColor="#666666"
  value={false}
/>
`;

exports[`AppSwitch snapshot matches disabled state 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  disabled={true}
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#A3BB62"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      {
        "backgroundColor": "#666666",
        "borderRadius": 16,
      },
    ]
  }
  thumbTintColor="#BADE5B"
  tintColor="#666666"
  value={false}
/>
`;

exports[`AppSwitch snapshot matches enabled state 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#A3BB62"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      {
        "backgroundColor": "#666666",
        "borderRadius": 16,
      },
    ]
  }
  thumbTintColor="#BADE5B"
  tintColor="#666666"
  value={true}
/>
`;

exports[`AppSwitch snapshot matches with custom colors 1`] = `
<RCTSwitch
  accessibilityRole="switch"
  onChange={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onTintColor="#00ff00"
  style={
    [
      {
        "height": 31,
        "width": 51,
      },
      {
        "backgroundColor": "#purple",
        "borderRadius": 16,
      },
    ]
  }
  thumbTintColor="#blue"
  tintColor="#ff0000"
  value={false}
/>
`;
